# activebsp

./: CMakeLists.txt  LICENCE  README  absp_run.sh.in  bootstrap.sh
src/ActiveBSP/: CMakeLists.txt
src/ActiveBSP/include/: Actor.h  Actor.hpp  ActorCommunicator.h  ActorRegistry.h  DistrFuture.h  Distributor.h  Future.h  IntraActorCommunicator.h  IntraActorCommunicatorFactory.h  Proxy.h  Proxy.hpp  SyntaxHelper.h  activebsp.h  activebsp.hpp  activebsp_init_config.h  decl_actor.h  error_codes.h  force_cast.hpp  member_traits.h  vector_distribution.h  vector_distribution.hpp
src/ActiveBSP/include/actormsg/: ActiveObjectRequest.h  ActorMessage.h  ActorMessage.hpp  ActorMessageFactory.h  CallActorMessage.h  CallActorMessage.hpp  CreateActorMessage.h  DistributeVectorMessage.h  FetchMessage.h  GetFutureDataMessage.h  GetResultPartsMessage.h  PrefetchMessage.h  RegisterFutureMessage.h  ReleaseFutureMessage.h  ReleaseResultPartMessage.h  StopActorMessage.h  StopActorProcessMessage.h  StoreResultMessage.h  StoreResultPartMessage.h  activebsp_instructions.h  activebsp_tags.h  instruction_envelope.h
src/ActiveBSP/include/distributions/: block_distribution.h
src/ActiveBSP/include/future/: DataStore.h  DirectFutureDataRetriever.h  DirectResultPublisher.h  Future.hpp  FutureDataRetriever.h  FutureKeyManager.h  LazyFutureDataRetriever.h  LazyFutureDataStore.h  LazyResultPublisher.h  ResultPublisher.h
src/ActiveBSP/include/management/: ActorServer.h  MPIWorkerMasterProxy.h  MasterProxy.h  ThreadedMPIActorServerFactory.h
src/ActiveBSP/include/mpi/: MPIActorCommunicator.h  MPIIntraActorCommunicator.h  MPIIntraActorCommunicatorFactory.h  MPIWrapper.h
src/ActiveBSP/include/procassign/: contiguous_assign.h
src/ActiveBSP/include/serialization/: boost_serialization.hpp  contiguous.hpp  contiguous_serialization.hpp  serialization.h  serialization.hpp
src/ActiveBSP/include/shmem/: ActorSharedMemory.h  SharedMemoryMasterProxy.h  SharedMemoryRequestQueue.h
src/ActiveBSP/include/worker/: ActorWorker.h  ActorWorkerFactory.h  ActorWorkerProxy.h  ThreadedActorWorkerFactory.h  ThreadedActorWorkerProxy.h
src/ActiveBSP/src/: Actor.cpp  ActorRegistry.cpp  Future.cpp  Proxy.cpp  SyntaxHelper.cpp  activebsp.cpp  vector_distribution.cpp
src/ActiveBSP/src/actormsg/: ActiveObjectRequest.cpp  ActorMessage.cpp  ActorMessageFactory.cpp  CallActorMessage.cpp  CreateActorMessage.cpp  DistributeVectorMessage.cpp  FetchMessage.cpp  GetFutureDataMessage.cpp  GetResultPartsMessage.cpp  PrefetchMessage.cpp  RegisterFutureMessage.cpp  ReleaseFutureMessage.cpp  ReleaseResultPartMessage.cpp  StopActorMessage.cpp  StopActorProcessMessage.cpp  StoreResultMessage.cpp  StoreResultPartMessage.cpp
src/ActiveBSP/src/distributions/: block_distribution.cpp
src/ActiveBSP/src/future/: DataStore.cpp  DirectFutureDataRetreiver.cpp  DirectResultPublisher.cpp  FutureKeyManager.cpp  LazyFutureDataRetriever.cpp  LazyFutureDataStore.cpp  LazyResultPublisher.cpp
src/ActiveBSP/src/management/: ActorServer.cpp  ThreadedActorWorkerProxy.cpp  ThreadedMPIActorServerFactory.cpp
src/ActiveBSP/src/mpi/: MPIActorCommunicator.cpp  MPIIntraActorCommunicator.cpp  MPIIntraActorCommunicatorFactory.cpp  MPIWrapper.cpp
src/ActiveBSP/src/procassign/: contiguous_assign.cpp
src/ActiveBSP/src/shmem/: ActorSharedMemory.cpp  SharedMemoryMasterProxy.cpp  SharedMemoryRequestQueue.cpp
src/ActiveBSP/src/worker/: ActorWorker.cpp  ThreadedActorWorkerFactory.cpp
src/NewActiveBSPonMPIWrapper/: CMakeLists.txt
src/NewActiveBSPonMPIWrapper/bsponmpi/include/: bsp_mpi_extension.h
src/NewActiveBSPonMPIWrapper/bsponmpi/patches/: CMakeLists.txt.patch
src/NewActiveBSPonMPIWrapper/include/: ActiveBSPlib.h
src/NewActiveBSPonMPIWrapper/src/: ActiveBSPlib.cpp
src/examples/: CMakeLists.txt
src/examples/distributions/: CMakeLists.txt
src/examples/distributions/src/: main.cpp
src/examples/hierarchycallown/: CMakeLists.txt
src/examples/hierarchycallown/src/: ActorA.cpp  ActorA.h  ActorB.h  main.cpp
src/examples/hierarchycallparam/: CMakeLists.txt
src/examples/hierarchycallparam/src/: ActorA.cpp  ActorA.h  ActorB.cpp  main.cpp
src/examples/imgproc/: CMakeLists.txt
src/examples/imgproc/src/: ImageDatabase.cpp  ImageDatabase.h  ImgStore.cpp  ImgStore.h  MonochromeCompressor.cpp  MonochromeCompressor.h  div_range.cpp  div_range.h  gen_images.cpp  imgproc_mpi.cpp  main.cpp  measure.cpp  measure.h
src/examples/innerproduct/: CMakeLists.txt
src/examples/innerproduct/src/: InnerProductActor.h  bspedupack.c.patch  bspedupack.h.patch  bspinprod.c.patch  main.cpp
src/examples/pipeactor/: CMakeLists.txt
src/examples/pipeactor/src/: main.cpp
src/examples/prefetch/: CMakeLists.txt
src/examples/prefetch/src/: main.cpp
src/examples/relayvector/: CMakeLists.txt  plot_relayvectorresult.sh
src/examples/relayvector/src/: relayvector.cpp
src/examples/sendfuture/: CMakeLists.txt
src/examples/sendfuture/src/: ActorA.cpp  ActorA.h  ActorB.cpp  ActorB.h  main.cpp
src/examples/sequencecall/: CMakeLists.txt
src/examples/sequencecall/src/: ActorA.cpp  ActorA.h  ActorB.cpp  ActorB.h  main.cpp
src/examples/simplecallactive/: CMakeLists.txt
src/examples/simplecallactive/src/: ActorA.h  main.cpp
src/examples/simplecallbsp/: CMakeLists.txt
src/examples/simplecallbsp/src/: ActorA.cpp  ActorA.h  main.cpp
src/examples/vectorcall/: CMakeLists.txt
src/tests/func/: CMakeLists.txt  gtest_activebsp_main.cpp  test_func_DistrVector.cpp  test_func_bad_cleanup_multiple_processes.cpp  test_func_bad_cleanup_one_process.cpp  test_func_distributionassoc.cpp  test_func_firstclass_future.cpp  test_func_multiple_call.cpp  test_func_multiple_instanciate.cpp  test_func_release_future.cpp  test_func_seq_sync.cpp  test_func_simple_active_call.cpp  test_func_simple_bsp_call.cpp
src/tests/unit/: CMakeLists.txt  test_callflow.cpp  test_unit_CallActorMessage.cpp  test_unit_CreateActorMessage.cpp  test_unit_DistrVector.cpp  test_unit_ThreadedQueue.cpp  test_unit_contiguous_assign.cpp  test_unit_contiguous_serialization.cpp  test_unit_serialization.cpp
(+9 files in other folders)
