add_subdirectory(simplecallactive)
add_subdirectory(simplecallbsp)
add_subdirectory(sequencecall)
add_subdirectory(hierarchycallown)
add_subdirectory(hierarchycallparam)
add_subdirectory(innerproduct)
add_subdirectory(sendfuture)
add_subdirectory(imgproc)
add_subdirectory(distributions)
add_subdirectory(prefetch)
add_subdirectory(pipeactor)
add_subdirectory(relayvector)
add_subdirectory(vectorcall)

